# hw4-web

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
storage/: data.json
