[tool.poetry]
name = "python-web hw4"
version = "0.1.0"
description = ""
authors = ["anton-akulenko <anton.htl@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_web hw4"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
